# public/docs/openapi.yaml
@@ -217,8 +217,8 @@ paths:
       -
         in: path
         name: cart_id
-        description: 'Cart ID .'
-        example: 1234
+        description: 'Cart ID.'
+        example: 16
         required: true
         schema:
           type: integer
@@ -264,19 +264,18 @@ paths:
                   example: 1234
               required:
                 - quantity
-      security: []
     parameters:
       -
         in: path
         name: cart_id
-        description: 'Cart ID .'
-        example: 1234
+        description: 'Cart ID.'
+        example: 7
         required: true
         schema:
           type: integer
   /api/user/inventories:
     get:
-      summary: ''
+      summary: 'List Inventory'
       description: ''
       parameters:
         -
@@ -294,24 +293,18 @@ paths:
           schema:
             type: string
       responses:
-        401:
+        200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"sucess || error message\",\n 'data' => []\n}"
       tags:
-        - Endpoints
-      security: []
+        - Inventories
   /api/admin/inventory/add:
     post:
-      summary: 'Create the specified resource in storage.'
+      summary: 'Create Inventory'
       description: ''
       parameters:
         -
@@ -328,9 +321,16 @@ paths:
           example: application/json
           schema:
             type: string
-      responses: {  }
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"Inventory Created Successfully, Inventory id: #334\"\n}"
       tags:
-        - Endpoints
+        - Inventories
       requestBody:
         required: true
         content:
@@ -340,47 +340,23 @@ paths:
               properties:
                 name:
                   type: string
-                  description: ''
-                  example: rerum
+                  description: 'Inventory Name .'
+                  example: 'Samsung S21 Ultra'
                 price:
-                  type: number
-                  description: ''
-                  example: 491.0
+                  type: integer
+                  description: 'Inventory Price.'
+                  example: 1450
                 quantity:
-                  type: number
-                  description: ''
-                  example: 3064531.9999
+                  type: integer
+                  description: 'Inventory Supplied Quantity.'
+                  example: 120
               required:
                 - name
                 - price
                 - quantity
-      security: []
-  /api/admin/inventory/list:
-    post:
-      summary: ''
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      security: []
   '/api/admin/inventory/view/{id}':
     get:
-      summary: 'Update the specified resource in storage.'
+      summary: 'View Specific Inventory'
       description: ''
       parameters:
         -
@@ -398,33 +374,35 @@ paths:
           schema:
             type: string
       responses:
-        401:
+        200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"sucess || error message\"\n}"
       tags:
-        - Endpoints
-      security: []
+        - Inventories
     parameters:
       -
         in: path
         name: id
         description: 'The ID of the view.'
-        example: in
+        example: necessitatibus
         required: true
         schema:
           type: string
+      -
+        in: path
+        name: inventory_id
+        description: 'Inventory ID.'
+        example: 1234
+        required: true
+        schema:
+          type: integer
   '/api/admin/inventory/delete/{id}':
     delete:
-      summary: 'Delete the specified resource in storage.'
+      summary: 'Delete Inventory'
       description: ''
       parameters:
         -
@@ -441,22 +419,36 @@ paths:
           example: application/json
           schema:
             type: string
-      responses: {  }
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"sucess || error message\"\n}"
       tags:
-        - Endpoints
-      security: []
+        - Inventories
     parameters:
       -
         in: path
         name: id
         description: 'The ID of the delete.'
-        example: quia
+        example: atque
         required: true
         schema:
           type: string
+      -
+        in: path
+        name: inventory_id
+        description: 'Inventory ID'
+        example: 11
+        required: true
+        schema:
+          type: integer
   '/api/admin/inventory/update/{id}':
     patch:
-      summary: 'Update the specified resource in storage.'
+      summary: 'Update Inventory'
       description: ''
       parameters:
         -
@@ -473,11 +465,18 @@ paths:
           example: application/json
           schema:
             type: string
-      responses: {  }
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"sucess || error message\"\n}"
       tags:
-        - Endpoints
+        - Inventories
       requestBody:
-        required: false
+        required: true
         content:
           application/json:
             schema:
@@ -485,26 +484,58 @@ paths:
               properties:
                 name:
                   type: string
-                  description: ''
-                  example: aut
+                  description: 'Inventory Name .'
+                  example: 'Samsung S21 Ultra'
                 price:
-                  type: number
-                  description: ''
-                  example: 0.3619
+                  type: integer
+                  description: 'Inventory Price.'
+                  example: 1450
                 quantity:
-                  type: number
-                  description: ''
-                  example: 12166630.07
-      security: []
+                  type: integer
+                  description: 'Inventory Supplied Quantity.'
+                  example: 120
+              required:
+                - name
+                - price
+                - quantity
     parameters:
       -
         in: path
         name: id
         description: 'The ID of the update.'
-        example: dicta
+        example: et
         required: true
         schema:
           type: string
+  /api/admin/inventory/list:
+    get:
+      summary: 'List Inventory'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n 'status' => \"success || error\",\n 'message' => \"sucess || error message\",\n 'data' => []\n}"
+      tags:
+        - Inventories
   /api/user/register:
     post:
       summary: 'Register User'
@@ -614,7 +645,7 @@ tags:
     name: Cart
     description: ''
   -
-    name: Endpoints
+    name: Inventories
     description: ''
   -
     name: 'User Authentication'
